# inviwo-pydata

./: .gitmodules  README.md
modules/pydata/: CMakeLists.txt  pydata.cpp  pydatamodule.cpp  pydatamodule.h  pydatamoduledefine.h  readme.md
modules/pydata/ext/pybind11/: CMakeLists.txt
modules/pydata/processors/: imagesourcebuffer.cpp  imagesourcebuffer.h  volumesourcebuffer.cpp  volumesourcebuffer.h
